compiler/test-data/parser/errors/contract/method_missing_parens.frel
module test

contract UserAPI {
    get_user : User
}
